Fix brand icon size on small devices

--- a/app-ui/src/main/webapp/themes/bootstrap-material-design/css/bootstrap-material-design.css
+++ b/app-ui/src/main/webapp/themes/bootstrap-material-design/css/bootstrap-material-design.css
@@ -2704,10 +2704,6 @@ fieldset[disabled] .navbar .btn-link:focus {
   background-color: #3f51b5;
 }
 @media (max-width: 1199px) {
-  .navbar .navbar-brand {
-    height: 50px;
-    padding: 10px 15px;
-  }
   .navbar .navbar-form {
     margin-top: 10px;
   }
